2012-10-01 - Patrick Broens <patrick@patrickbroens.nl>
 ~ [BUGFIX] Survey is skipped to the end

2012-09-28 - Patrick Broens <patrick@patrickbroens.nl>
 ~ [BUGFIX] Start and endtime of a survey are the same
 ~ [BUGFIX] Question Type 9: Matrix – Rating Scale (Numeric) does not work if starting number > ending number
 + [BUGFIX] Result in mail unusuable for matrix questions
 + [FEATURE] Matrix: Possiblity to set a fixed width for first Column

2012-09-27 - Patrick Broens <patrick@patrickbroens.nl>
 + [FEATURE] Start single response survey at the point where the user left the survey
 ~ [BUGFIX] Translations are not taken from translation server
 ~ [BUGFIX] Can't exclude CSS field for regular BE-users
 ~ [BUGFIX] Question type 'Open Ended - Constant Sum' doesn't remember sum after validation error
 + [FEATURE] Answers not editable without the use of the answer wizard
 ~ [BUGFIX] From "name" in email is hardcoded to "survey
 ~ [BUGFIX] Mail message sent in wrong charset

2012-09-20 - Patrick Broens <patrick@patrickbroens.nl>
 ~ [BUGFIX] Pagebreak conditions not working
 ~ [BUGFIX] Backend module is using deprecated methods for 4.6

2007-06-01 - Patrick Broens <patrick@patrickbroens.nl>
 ~ Moved JS validation from button to form

2007-05-30 - Patrick Broens <patrick@patrickbroens.nl>
 + Added <noscript> tag when only client side validation. Just a simple bypass. Can be avoided by switching off CSS.
 ~ Changed default value Form validation to PHP Server Side
 ~ Changed default value completion action to "display message"
 ~ Changed default value Page Numbering to "Display progress as progress bar"
 ~ Changed default value Question Numbering to "Number questions within entire questionaire"

2007-05-25 - Patrick Broens <patrick@patrickbroens.nl>
 ~ Bugfix to critical #5179: All answers from all users to a question were deleted when using radiobuttons and answering was not required to the question