@@ -1,3 +1,6 @@
+2012-10-02 - Patrick Broens <patrick@patrickbroens.nl>
+ ~ [BUGFIX] Survey starts at first question without answer when using start point after leaving
+
 2012-10-01 - Patrick Broens <patrick@patrickbroens.nl>
  ~ [BUGFIX] Survey is skipped to the end
 
